fixed alignment

--- a/src/components/styles/freelancersStyles.scss
+++ b/src/components/styles/freelancersStyles.scss
@@ -22,6 +22,11 @@
             
         }
     }
+
+    h2 {
+        text-align: center;
+    }
+
     .freelancers_list {
         display: flex;
         flex-wrap: wrap;
